# calliope

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md
src/: AppProperties.h  Main.cpp  MainComponent.cpp  MainComponent.h
src/audio/: MidiDeviceOutput.cpp  MidiDeviceOutput.h  VstPluginHost.cpp  VstPluginHost.h
src/document/: Document.cpp  Document.h
src/engine/: PlaybackEngine.cpp  PlaybackEngine.h  PlaybackListener.h  PlaybackProcessor.cpp  PlaybackProcessor.h  PlaybackSnapshot.cpp  PlaybackSnapshot.h
src/io/: MidiFileIO.cpp  MidiFileIO.h
src/model/: MidiEvent.h  MidiNote.h  MidiSequence.cpp  MidiSequence.h  MidiTrack.cpp  MidiTrack.h  UndoActions.h
src/ui/: ControllerLaneComponent.cpp  ControllerLaneComponent.h  EventListComponent.cpp  EventListComponent.h  LookAndFeel.cpp  LookAndFeel.h  PianoRollComponent.cpp  PianoRollComponent.h  Theme.h  TrackColours.h  TrackListComponent.cpp  TrackListComponent.h  WheelLabel.h
